# gazebo_poltergeist_gimbal

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: create_benchtest_world.launch  hello.launch  testbench_world.launch  top_gimbal.launch
resources/models/: gimbal_snippets.xacro  ground_gimbal.acro  two_box.urdf.acro
resources/worlds/: basic.world  hello.world  testbench.world
src/: gazebo_poltergeist_gimbal_plugin.cpp  simple_world_plugin.cpp
