<?xml version="1.0"?>
<package>
  <name>gazebo_poltergeist_gimbal</name>
  <version>0.17.0</version>
 <description>The gazebo_poltergeist_gimbal package</description>
  <maintainer email="lteixeira@mavt.ethz.ch">Lucas Teixeira</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
